--- a/index.html
+++ b/index.html
@@ -8,21 +8,53 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 20px;
         }
         #statusText {
             font-size: 24px;
             margin-bottom: 20px;
         }
-        #betButton {
+        .betButton, .resultButton {
             padding: 10px 20px;
             font-size: 18px;
+            margin: 10px;
+        }
+        #bigRoad {
+            margin-top: 20px;
+        }
+        .bigRoadRow {
+            display: flex;
+            justify-content: center;
+        }
+        .bigRoadCell {
+            width: 20px;
+            height: 20px;
+            border: 1px solid #000;
+            margin: 2px;
+            text-align: center;
+            line-height: 20px;
+            font-size: 12px;
+        }
+        .player {
+            background-color: blue;
+            color: white;
+        }
+        .banker {
+            background-color: red;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <div id="statusText">Place your bet!</div>
-    <button id="betButton">Place Bet</button>
+    <div id="statusText">Enter the last result!</div>
+    <button class="resultButton" onclick="recordResult('Player')">Player</button>
+    <button class="resultButton" onclick="recordResult('Banker')">Banker</button>
+    <br>
+    <div id="bettingButtons" style="display: none;">
+        <button class="betButton" onclick="placeBet('Player')">Bet Player</button>
+        <button class="betButton" onclick="placeBet('Banker')">Bet Banker</button>
+    </div>
+    <div id="bigRoad"></div>
 
     <script src="script.js"></script>
 </body>
