--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         }
         #bigRoad {
             margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         .bigRoadRow {
             display: flex;
-            justify-content: center;
+            flex-wrap: nowrap;
         }
         .bigRoadCell {
             width: 20px;
             height: 20px;
             border: 1px solid #000;
-            margin: 2px;
+            margin: 1px;
             text-align: center;
             line-height: 20px;
             font-size: 12px;
