--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <option value="alternate">Alternate Bets</option>
                 <option value="trend">Follow the Trend</option>
                 <option value="reverseTrend">Reverse the Trend</option>
+                <option value="zachSecretSauce">Zach's Secret Sauce #1</option>
             </select>
         </div>
         <div id="recommendedBet">Recommended Bet: </div>
