--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             justify-content: center;
             background-color: #f0f0f0;
             margin: 0;
-            height: 100vh;
+            padding: 20px;
+            min-height: 100vh;
         }
         #container {
             background: #fff;
@@ -63,22 +64,19 @@
         }
         #bigRoad {
             margin-top: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .bigRoadRow {
-            display: flex;
-            flex-wrap: nowrap;
+            display: grid;
+            grid-template-columns: repeat(12, 30px); /* Adjust based on your needs */
+            gap: 1px;
         }
         .bigRoadCell {
-            width: 25px;
-            height: 25px;
+            width: 30px;
+            height: 30px;
             border: 1px solid #000;
-            margin: 1px;
-            text-align: center;
-            line-height: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 14px;
+            border-radius: 50%;
         }
         .player {
             background-color: #007bff;
