--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         #bigRoad {
             margin-top: 20px;
             display: grid;
-            grid-template-columns: repeat(12, 30px); /* Adjust based on your needs */
+            grid-template-columns: repeat(12, 30px);
             gap: 1px;
         }
         .bigRoadCell {
