--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 <body>
     <div id="container">
         <div id="statusText">Enter the last result!</div>
-        <button class="resultButton player" onclick="recordResult('Player')">Player</button>
-        <button class="resultButton banker" onclick="recordResult('Banker')">Banker</button>
+        <button class="resultButton player" onclick="setPotentialResult('Player')">Player</button>
+        <button class="resultButton banker" onclick="setPotentialResult('Banker')">Banker</button>
         <div>
             <label for="strategySelect">Select Betting Strategy: </label>
             <select id="strategySelect" onchange="changeStrategy()">
