--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         <div id="counters">
             <div class="counter">Wins: <span id="winCount">0</span></div>
             <div class="counter">Losses: <span id="lossCount">0</span></div>
-            <div class="counter">Player: <span id="playerCount">0</span></div>
-            <div class="counter">Banker: <span id="bankerCount">0</span></div>
+            <div class="counter">Player: <span id="playerCount">0"></span></div>
+            <div class="counter">Banker: <span id="bankerCount">0"></span></div>
         </div>
         <div>
             <button class="winLossButton" onclick="recordWin()">Win</button>
