--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
+            width: 90%;
             max-width: 800px;
             text-align: center;
         }
@@ -136,8 +136,8 @@
         <div id="counters">
             <div class="counter">Wins: <span id="winCount">0</span></div>
             <div class="counter">Losses: <span id="lossCount">0</span></div>
-            <div class="counter">Player: <span id="playerCount">0"></span></div>
-            <div class="counter">Banker: <span id="bankerCount">0"></span></div>
+            <div class="counter">Player: <span id="playerCount">0</span></div>
+            <div class="counter">Banker: <span id="bankerCount">0</span></div>
         </div>
         <div>
             <button class="winLossButton" onclick="recordWin()">Win</button>
@@ -148,7 +148,5 @@
         <div id="smallRoad" class="viewContainer"></div>
         <div id="cockroachPig" class="viewContainer"></div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
