--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="statusText">Enter the last result!</div>
+        <div id="statusText">Enter the last result! Virtual Bet 1 Loss on One strategy and then start betting on a different strategy</div>
         <button class="resultButton player" onclick="setPotentialResult('Player')">Player</button>
         <button class="resultButton banker" onclick="setPotentialResult('Banker')">Banker</button>
         <div>
